--- a/style.css
+++ b/style.css
@@ -426,33 +426,33 @@ body.dark-mode .modal-content button:hover {
 
 /* Form Messages */
 .form-message {
-    padding: 8px;
-    /* border-radius: 4px; */
+    padding: 5px;
+    border-radius: 4px;
     margin-top: 1px;
     font-size: 0.9rem;
-    text-align: center;
+    /* text-align: center; */
 }
 
 .form-message.error {
-    /* background-color: #ffe3e3; */
+    background-color: #ffe3e3;
     color: #dc3545;
-    /* border: 1px solid #dc3545; */
+    border: 1px solid #dc3545;
 }
 
 .form-message.success {
-    /* background-color: #d4edda; */
+    background-color: #d4edda;
     color: #155724;
-    /* border: 1px solid #c3e6cb; */
+    border: 1px solid #c3e6cb;
 }
 
 body.dark-mode .form-message.error {
-    /* background-color: #2c0b0e; */
-    /* border-color: #842029; */
+    background-color: #2c0b0e;
+    border-color: #842029;
 }
 
 body.dark-mode .form-message.success {
-    /* background-color: #0f5132; */
-    /* border-color: #099268; */
+    background-color: #0f5132;
+    border-color: #099268;
 }
 
 /* Responsive Adjustments */
